schema/testdata/errors/tasks_actions_section.keel
task MyTask {
    fields {
        name Text
    }
    //expect-error:5:5:E025: unexpected token "actions" (expected "}")
    actions {

    }
}